--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             transform: translate(-50%, -50%);
         }
         .svg-ani {
-            stroke: #c7ecee;
+            stroke: #fff;
             fill: none;
             filter: blur(40px);
             animation: loading 3s infinite linear;
@@ -71,6 +71,7 @@
             height: 100%;
             top: 0;
             left: 0;
+            background: radial-gradient(ellipse at top, #1abc9c, transparent), radial-gradient(ellipse at bottom, #2980b9, transparent);
         }
     </style>
 </head>
@@ -93,31 +94,10 @@
         <div class="swiper-pagination"></div>
     </div> -->
     <div class="loading-overlay">
-        <!-- <svg width="400" height="400" id="grid">
-            <path d="M0 0H400" stroke="#666"></path><path d="M0 0V400" stroke="#666"></path><path d="M0 10H400" stroke="#666"></path><path d="M10 0V400" stroke="#666"></path><path d="M0 20H400" stroke="#666"></path><path d="M20 0V400" stroke="#666"></path><path d="M0 30H400" stroke="#666"></path><path d="M30 0V400" stroke="#666"></path><path d="M0 40H400" stroke="#666"></path><path d="M40 0V400" stroke="#666"></path><path d="M0 50H400" stroke="#666"></path><path d="M50 0V400" stroke="#666"></path><path d="M0 60H400" stroke="#666"></path><path d="M60 0V400" stroke="#666"></path><path d="M0 70H400" stroke="#666"></path><path d="M70 0V400" stroke="#666"></path><path d="M0 80H400" stroke="#666"></path><path d="M80 0V400" stroke="#666"></path><path d="M0 90H400" stroke="#666"></path><path d="M90 0V400" stroke="#666"></path><path d="M0 100H400" stroke="#666"></path><path d="M100 0V400" stroke="#666"></path><path d="M0 110H400" stroke="#666"></path><path d="M110 0V400" stroke="#666"></path><path d="M0 120H400" stroke="#666"></path><path d="M120 0V400" stroke="#666"></path><path d="M0 130H400" stroke="#666"></path><path d="M130 0V400" stroke="#666"></path><path d="M0 140H400" stroke="#666"></path><path d="M140 0V400" stroke="#666"></path><path d="M0 150H400" stroke="#666"></path><path d="M150 0V400" stroke="#666"></path><path d="M0 160H400" stroke="#666"></path><path d="M160 0V400" stroke="#666"></path><path d="M0 170H400" stroke="#666"></path><path d="M170 0V400" stroke="#666"></path><path d="M0 180H400" stroke="#666"></path><path d="M180 0V400" stroke="#666"></path><path d="M0 190H400" stroke="#666"></path><path d="M190 0V400" stroke="#666"></path><path d="M0 200H400" stroke="#666"></path><path d="M200 0V400" stroke="#666"></path><path d="M0 210H400" stroke="#666"></path><path d="M210 0V400" stroke="#666"></path><path d="M0 220H400" stroke="#666"></path><path d="M220 0V400" stroke="#666"></path><path d="M0 230H400" stroke="#666"></path><path d="M230 0V400" stroke="#666"></path><path d="M0 240H400" stroke="#666"></path><path d="M240 0V400" stroke="#666"></path><path d="M0 250H400" stroke="#666"></path><path d="M250 0V400" stroke="#666"></path><path d="M0 260H400" stroke="#666"></path><path d="M260 0V400" stroke="#666"></path><path d="M0 270H400" stroke="#666"></path><path d="M270 0V400" stroke="#666"></path><path d="M0 280H400" stroke="#666"></path><path d="M280 0V400" stroke="#666"></path><path d="M0 290H400" stroke="#666"></path><path d="M290 0V400" stroke="#666"></path><path d="M0 300H400" stroke="#666"></path><path d="M300 0V400" stroke="#666"></path><path d="M0 310H400" stroke="#666"></path><path d="M310 0V400" stroke="#666"></path><path d="M0 320H400" stroke="#666"></path><path d="M320 0V400" stroke="#666"></path><path d="M0 330H400" stroke="#666"></path><path d="M330 0V400" stroke="#666"></path><path d="M0 340H400" stroke="#666"></path><path d="M340 0V400" stroke="#666"></path><path d="M0 350H400" stroke="#666"></path><path d="M350 0V400" stroke="#666"></path><path d="M0 360H400" stroke="#666"></path><path d="M360 0V400" stroke="#666"></path><path d="M0 370H400" stroke="#666"></path><path d="M370 0V400" stroke="#666"></path><path d="M0 380H400" stroke="#666"></path><path d="M380 0V400" stroke="#666"></path><path d="M0 390H400" stroke="#666"></path><path d="M390 0V400" stroke="#666"></path><path d="M0 400H400" stroke="#666"></path><path d="M400 0V400" stroke="#666"></path>
-        </svg> -->
         <svg width="200" height="200" id="svg">
-            <!-- <path d="M10 10C120 10, 120 90, 50 100C120 110, 120 190, 10 190Z" class="svg-bg"/>
-            <path d="M10 10C120 10, 120 90, 50 100C120 110, 120 190, 10 190Z" class="svg-ani"/> -->
-            <!-- <path d="M20 40A20 20 0 1 1 40 20H37A3 3 0 1 0 33 18A12 12 1 0 0 19 18A3 3 0 1 0 15 20A13 13 0 0 0 20 40" class="svg-bg"/> -->
-            <!-- <path d="M200 400A200 200 0 1 1 400 200H370A28 28 0 1 0 330 180A120 120 1 0 0 190 180A28 28 0 1 0 150 200L180 290L190 320L230 180L240 300L260 270L270 360L290 280L300 300L340 240L400 400Z" class="svg-bg"/> -->
-            <!-- <path d="M20 40A20 20 0 1 1 40 20H37A3 3 0 1 0 33 18A12 12 1 0 0 19 18A3 3 0 1 0 15 20L18 29L19 32L23 18L24 30L26 27L27 36L29 28L30 30L34 24L40 40Z" class="svg-ani"/> -->
-            <!-- <path d="M200 400A200 200 0 1 1 400 200H370A28 28 0 1 0 330 180A120 120 1 0 0 190 180A28 28 0 1 0 150 200A140 140 0 0 0 180 370L190 220C280 220,280 300,220 300C280 300,270 380,230 380L390 380A10 10 0 1 1 390 400Z" class="svg-ani"/> -->
             <path d="M100 180A80 80 0 1 1 180 100H168A12 12 0 1 0 152 92A48 48 1 0 0 96 92A12 12 0 1 0 80 100A52 52 0 0 0 100 180" class="svg-bg"/>
             <path d="M100 180A80 80 0 1 1 180 100H168A12 12 0 1 0 152 92A48 48 1 0 0 96 92A12 12 0 1 0 80 100A52 52 0 0 0 100 180" class="svg-ani"/>
         </svg>
-        <!-- <br>
-        <svg width="200" height="200" id="svg">
-            <path d="M60 120A60 60 0 1 1 120 60H111A9 9 0 1 0 99 54A36 36 1 0 0 57 54A9 9 0 1 0 45 60A39 39 0 0 0 60 120"/>
-        </svg><br>
-        <svg width="100" height="100">
-            <path d="M20 10A30 30 0 1 1 10 20L30 30Z" class="svg-bg"/>
-            <path d="M20 10A30 30 0 1 1 10 20L30 30Z" class="svg-ani"/>
-        </svg><br>
-        <svg width="100" height="100">
-            <circle cx="50" cy="50" r="30" class="svg-ani"/>
-            <path d="M0 50H100" class="svg-ani"/>
-        </svg> -->
     </div>
     <script src="./js/axios.min.js"></script>
     <script src="./js/swiper.min.js"></script>
@@ -145,7 +125,7 @@
             const path = document.querySelectorAll('.svg-ani');
             path.forEach(e => {
                 const len = e.getTotalLength();
-                const strikeLen = 30;
+                const strikeLen = 50;
                 e.style.strokeDasharray = `${strikeLen} ${len - strikeLen}`;
                 e.style.strokeDashoffset = len;
             })
