--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
             transform: translate(-50%, -50%);
         }
         .svg-ani {
-            stroke: #fff;
+            stroke: #12CBC4;
             fill: none;
             filter: blur(40px);
             animation: loading 3s infinite linear;
         }
         .svg-bg {
-            stroke: #3498db;
+            stroke: #fff;
             fill: none;
         }
         @keyframes loading {
