--- a/index.html
+++ b/index.html
@@ -72,11 +72,15 @@
             top: 0;
             left: 0;
             background: radial-gradient(ellipse at top, #1abc9c, transparent), radial-gradient(ellipse at bottom, #2980b9, transparent);
+            z-index: 99999;
+        }
+        .loading-overlay.finished {
+            display: none;
         }
     </style>
 </head>
 <body>
-    <!-- <div class="swiper-container">
+    <div class="swiper-container">
         <div class="swiper-wrapper">
             <div class="swiper-slide" style="background-color: #00b3ee;">
                 <img class="slide-img">
@@ -92,7 +96,7 @@
             </div>
         </div>
         <div class="swiper-pagination"></div>
-    </div> -->
+    </div>
     <div class="loading-overlay">
         <svg width="200" height="200" id="svg">
             <path d="M100 180A80 80 0 1 1 180 100H168A12 12 0 1 0 152 92A48 48 1 0 0 96 92A12 12 0 1 0 80 100A52 52 0 0 0 100 180" class="svg-bg"/>
@@ -104,22 +108,25 @@
     <script src="./js/load.js"></script>
     <script>
         window.onload = () => {
-            // const swiper = new Swiper('.swiper-container', {
-            //     direction: 'vertical',
-            //     loop: false,
-            //     pagination: {
-            //         el: '.swiper-pagination'
-            //     }
-            // })
-            // const slideImgs = document.querySelectorAll('.slide-img');
-            // load(['./imgs/1.jpg', './imgs/2.jpg', './imgs/3.jpg', './imgs/3.jpg']).then(data => {
-            //     console.log(data);
-            //     alert('preload completed');
-            //     slideImgs.forEach((img, i) => {
-            //         const url = URL.createObjectURL(data[i]);
-            //         img.src = url;
-            //     })
-            // })
+            const loadingOverlay = document.querySelector('.loading-overlay');
+
+            loadingOverlay.addEventListener('transitionend', overlayListener, false);
+
+            const swiper = new Swiper('.swiper-container', {
+                direction: 'vertical',
+                loop: false,
+                pagination: {
+                    el: '.swiper-pagination'
+                }
+            })
+            const slideImgs = document.querySelectorAll('.slide-img');
+            load(['./imgs/1.jpg', './imgs/2.jpg', './imgs/3.jpg', './imgs/3.jpg']).then(data => {
+                slideImgs.forEach((img, i) => {
+                    const url = URL.createObjectURL(data[i]);
+                    img.src = url;
+                })
+                loadingOverlay.classList.add('finished')
+            })
             // drawGrid();
             // draw(4);
             const path = document.querySelectorAll('.svg-ani');
@@ -129,6 +136,11 @@
                 e.style.strokeDasharray = `${strikeLen} ${len - strikeLen}`;
                 e.style.strokeDashoffset = len;
             })
+        
+            function overlayListener() {
+                loadingOverlay.removeEventListener('transitionend', overlayListener, false);
+                loadingOverlay.style.display = 'none';
+            }
         }
         function drawGrid() {
             const grid = document.createElement('svg');
